[gd_scene load_steps=5 format=3 uid="uid://n23ru4dboaoj"]

[ext_resource type="Script" uid="uid://bym1w5nrgncg8" path="res://scripts/ui/main_menu_ui.gd" id="1_fsom3"]
[ext_resource type="Texture2D" uid="uid://b4vhbrak6dlf7" path="res://assets/art/ui/menu_button_ligth.png" id="2_0ebjn"]
[ext_resource type="Theme" uid="uid://c0ap57ejpbr3v" path="res://global_theme.tres" id="2_uqeha"]
[ext_resource type="Texture2D" uid="uid://c7x4qiud3uvbp" path="res://assets/art/ui/menu_button_dark.png" id="3_ob46e"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uqeha")
script = ExtResource("1_fsom3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.89411765, 0.7607843, 0.61960787, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -121.5
offset_right = 140.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.98039216, 0.9529412, 0.9019608, 1)
text = "THE LAST RIVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuContainer"]
layout_mode = 2

[node name="ButtonNewGame" type="TextureButton" parent="MenuContainer"]
layout_mode = 2
size_flags_stretch_ratio = 5.0
theme = ExtResource("2_uqeha")
texture_normal = ExtResource("2_0ebjn")
texture_pressed = ExtResource("3_ob46e")
texture_hover = ExtResource("3_ob46e")
stretch_mode = 0

[node name="NewGameLabel" type="Label" parent="MenuContainer/ButtonNewGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "New Game"

[node name="ButtonContinue" type="TextureButton" parent="MenuContainer"]
layout_mode = 2
texture_normal = ExtResource("2_0ebjn")
texture_pressed = ExtResource("3_ob46e")
texture_hover = ExtResource("3_ob46e")
stretch_mode = 0

[node name="ContinueLabel" type="Label" parent="MenuContainer/ButtonContinue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -10.0
offset_right = 80.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"

[node name="ButtonSettings" type="TextureButton" parent="MenuContainer"]
layout_mode = 2
texture_normal = ExtResource("2_0ebjn")
texture_pressed = ExtResource("3_ob46e")
texture_hover = ExtResource("3_ob46e")
stretch_mode = 0

[node name="SettingsLabel" type="Label" parent="MenuContainer/ButtonSettings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 122.0
grow_vertical = 0
text = "v0.1 - Prototype"

[connection signal="pressed" from="MenuContainer/ButtonNewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="MenuContainer/ButtonContinue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="MenuContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
